# wgpu-winit-sandbox

./: Cargo.toml  README.md
src/: main.rs
src/examples/: base.rs  buffers_and_indexes.rs  buffers_and_indexes.wgsl  mod.rs  shader.wgsl  triangle.rs  triangle_shader.wgsl
src/examples/perspective_camera/: camera.rs  mod.rs  shader.wgsl  texture.rs
src/examples/textures_and_bind_groups/: mod.rs  shader.wgsl
