[package]
name = "wgpu-winit-sandbox"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
async-std = "1.13.0"
bytemuck = {version =  "1.22.0", features = ["derive"] }
cgmath = "0.18.0"
#image = "0.25.6"
wgpu = "24.0.1"
winit = "0.30.9"

[dependencies.image]
version = "0.25.6"
default-features = false
features = ["png", "jpeg"]

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3     # Max optimization level
lto = "fat"       # Link Time Optimization
codegen-units = 1 # Better performance
panic = "abort"   # Small binary size
strip = true      # Remove debug information (made binary smaller)
